--- a/laya/pages/test/load.ui
+++ b/laya/pages/test/load.ui
@@ -2,7 +2,7 @@
     "x":0,
     "type":"View",
     "selectedBox":1,
-    "selecteID":10,
+    "selecteID":15,
     "props":{"width":750,"sceneColor":"#000000","height":1500},
     "nodeParent":-1,
     "label":"View",
@@ -83,19 +83,6 @@
         {
             "x":15,
             "type":"Image",
-            "props":{"y":1082,"x":578,"width":109,"var":"butterfly","skin":"load/butterfly.png","pivotY":71,"pivotX":73,"height":107},
-            "nodeParent":1,
-            "label":"Image(butterfly)",
-            "isDirectory":false,
-            "isAniNode":true,
-            "hasChild":false,
-            "compId":10,
-            "child":[
-                ]
-        },
-        {
-            "x":15,
-            "type":"Image",
             "props":{"y":0,"x":116,"skin":"load/load_box.png"},
             "nodeParent":1,
             "label":"Image",
@@ -106,6 +93,32 @@
             "child":[
                 ],
             "$HIDDEN":false
+        },
+        {
+            "x":15,
+            "type":"Image",
+            "props":{"y":1080,"x":580,"width":132,"var":"butterfly","skin":"load/butterfly.png","rotation":-34,"pivotY":41,"pivotX":66,"height":81},
+            "nodeParent":1,
+            "label":"Image(butterfly)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":14,
+            "child":[
+                ]
+        },
+        {
+            "x":15,
+            "type":"Image",
+            "props":{"y":0,"x":0,"var":"load_left","skin":"load/load_left.png"},
+            "nodeParent":1,
+            "label":"Image(load_left)",
+            "isDirectory":false,
+            "isAniNode":true,
+            "hasChild":false,
+            "compId":15,
+            "child":[
+                ]
         }],
     "animations":[
         {
